<resources>
    <string name="app_name">GMaps2</string>
    <string name="btn_name_lite_map">List Map</string>
    <string name="btn_name_form_map">Form Map</string>
    <string name="btn_name_artist">Artist</string>
    <string name="btn_primer_mapa">MAPA 1</string>
    <string name="btn_new_p">NEW PROCESSOR</string>
    <string name="title_activity_map_three">MapThreeActivity</string>
    <string name="btn_map_three">MAPA 3</string>
    <string name="btn_cuarto_mapa">MAPA 4</string>
    <string name="btn_quinto_mapa">MAPA 5</string>
    <string name="title_marker_castillo_ponferrada">Castillo Ponferrada</string>
    <string name="btn_text_normal">Normal</string>
    <string name="btn_text_hybrid">Hybrid</string>
    <string name="btn_text_satellite">Sat</string>
    <string name="btn_text_terrain">Terrain</string>
    <string name="btn_text_none">N/A</string>
    <string name="toast_msg_nav_ready">Navegador preparado</string>
    <string name="btn_sexto_mapa">MAPA 6</string>
    <string name="mark_valencia">Ciudad de las Artes y las Ciencias</string>
    <string name="toast_click_txt">Click</string>
    <string name="toast_long_click_txt">Long click</string>
    <string name="marker_valencia">Valencia, Spain</string>
    <string name="tag_abc">abc</string>
    <string name="location_permission_denied">Permiso denegado. Por favor intente de nuevo y otorgue el permiso de ubicación.\nSi el permiso ha sido denegado permanentemente, este puede habilitarse en Configuración &gt; Aplicaciones &gt; Maps Basics.</string>
    <string name="permission_required_toast">El permiso de ubicación es requerido.</string>
    <string name="permission_rationale_location">Se requiere acceder al servicio de ubicación</string>
    <string name="btn_my_location">MI LOCALIZACION</string>
    <string name="btn_map_markers">MAP MARKER</string>
    <string name="marker_valencia_pc">Valencia Parque Central</string>
    <string name="text_parc_central">Parque urbano moderno y renovado, con jardines paisajísticos, zona infantil, una fuente y área canina.</string>
    <string name="name_parc_central">Parc Central</string>
    <string name="pCentral_name">Parque Central</string>
    <string name="btn_polyline">SHAPES</string>
    <string name="marker_murcia_terra_natura">Terra Natura, Murcia</string>
    <string name="tag_polyline">Rodeamos Murcia</string>
    <string name="tag_polygon">Rodeamos Ponferrada</string>
    <string name="tag_polygon2">Rodeamos otra zona de Ponferrada</string>
    <string name="card_lite_title">Murcia</string>
    <string name="card_lite_description">Ven a nuestra tierra de limones y paparajotes.</string>
    <string name="btn_title_lite_mode">LITE MODE</string>
    <string name="preview_name_item_lite_list">Nombre completo</string>
    <string name="hint_form_name">Nombre</string>
    <string name="hint_form_surname">Apellidos</string>
    <string name="hint_form_birth_location">Lugar de Nacimiento</string>
    <string name="btn_text_save">GUARDAR</string>
    <string name="content_description_marker">Marcador de localización</string>
    <string name="fragment_toolbar_title">Editar Ubicación</string>
    <string name="material_button_tb_form_fragment_text">SAVE</string>
    <string name="tv_text_circular_reveal">Ubicación seleccionada</string>
</resources>