<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_min"
    tools:context=".MainActivity">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLiteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:text="@string/btn_name_lite_map"
        app:icon="@drawable/ic_map"
        android:textColor="@color/pink"
        app:iconTint="@color/pink"
        app:iconGravity="textEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFormMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:text="@string/btn_name_form_map"
        app:icon="@drawable/ic_form"
        android:textColor="@color/pink"
        app:iconTint="@color/pink"
        app:iconGravity="textEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLiteList"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:text="@string/btn_name_artist"
        app:icon="@drawable/ic_list"
        android:textColor="@color/pink"
        app:iconTint="@color/pink"
        app:iconGravity="textEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintStart_toEndOf="@id/btnLiteList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_padding_none"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLiteList">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_primer_mapa"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNewProcessor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_p"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMapThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_map_three"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPMapFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cuarto_mapa"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPMapFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_quinto_mapa"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPMapSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sexto_mapa"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMapML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_my_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMapM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_map_markers"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPolyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_polyline"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_title_lite_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:icon="@drawable/ic_map_white"
                app:iconGravity="textEnd"
                />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>