<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstMapActivity">
    <fragment
        android:id="@+id/mapM"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_default"
        app:checkedButton="@+id/btnNormal"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btnNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/common_padding_none"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/btn_text_normal"
            android:textColor="@color/white"
            style="?attr/materialButtonOutlinedStyle"/>
        <Button
            android:id="@+id/btnHybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/common_padding_none"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/btn_text_hybrid"
            android:textColor="@color/white"
            style="?attr/materialButtonOutlinedStyle"/>
        <Button
            android:id="@+id/btnSatellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/common_padding_none"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/btn_text_satellite"
            android:textColor="@color/white"
            style="?attr/materialButtonOutlinedStyle"/>
        <Button
            android:id="@+id/btnTerrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/common_padding_none"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/btn_text_terrain"
            android:textColor="@color/white"
            style="?attr/materialButtonOutlinedStyle"/>
        <Button
            android:id="@+id/btnNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/common_padding_none"
            android:textAppearance="?attr/textAppearanceCaption"
            android:text="@string/btn_text_none"
            android:textColor="@color/white"
            style="?attr/materialButtonOutlinedStyle"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>