<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    tools:context=".aristForm.FormActivity">
    <ImageView
        android:id="@+id/imgForm"
        android:layout_width="@dimen/img_form_width_size"
        android:layout_height="@dimen/img_form_width_size"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="@dimen/common_padding_none"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tilSurname"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/imgForm"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:hint="@string/hint_form_name"
        app:startIconDrawable="@drawable/ic_person_pin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/common_padding_default"
        app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
        app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
        app:boxCornerRadiusBottomEnd="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSurname"
        android:layout_width="@dimen/common_padding_none"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tilName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@+id/imgForm"
        android:hint="@string/hint_form_surname"
        app:startIconDrawable="@drawable/ic_person_pin"
        app:boxCornerRadiusTopStart="@dimen/common_padding_default"
        app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
        app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
        app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
        android:id="@+id/imgBtnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tilBirthLocation"
        app:layout_constraintBottom_toBottomOf="@id/tilBirthLocation"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/common_padding_default"
        android:src="@drawable/ic_location_edit"
        android:background="?attr/selectableItemBackground"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBirthLocation"
        android:layout_width="@dimen/common_padding_none"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgBtnLocation"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        android:hint="@string/hint_form_birth_location"
        app:startIconDrawable="@drawable/ic_location"
        app:boxCornerRadiusTopStart="@dimen/common_padding_default"
        app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
        app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
        app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:maxLines="2"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilBirthLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/btn_text_save"
        app:iconGravity="textEnd"
        app:icon="@drawable/ic_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="2dp"
        app:strokeColor="@color/purple_500"
        app:cornerRadius="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>